Fixed Header and text wrapped around image

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   padding-top: 150px;
-}
+  position: absolute;
+  }
 article {
   background: white;
   border: 2px solid gray;
@@ -8,19 +9,32 @@ article {
   margin-left: 5%;
   margin-top: 2rem;
   padding: 1rem;
-  width: 15rem;
+  width: 20rem;
+  height: 12rem;
   display: inline-block;
 }
 html {
   background-color:white;
 }
-.right {
+.fixed-nav-bar {
+  position:fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 10px;
+  background-color: white;
+}
+.right ul {
 float: right;
 padding: 5px 10px 10px 5px;
-font-size: 12px;
+font-size: 11px;
 list-style: none;
 white-space: nowrap;
 display: block;
+}
+.right li {
+  display: inline-block;
 }
 p {
     font-size: 0.75rem;
@@ -33,11 +47,20 @@ p {
   h2 {
     color: #424242;
     font-size: 1.5rem;
+    margin-top:0em;
+    #view1,#view2,#view3,#view4,#view5 { margin-top:-4em; height:4em; }
+
   }
   h3 {
     color: #585858;
     font-size: 1rem;
   }
+  img {
+    margin: 0px 10px 0px 0px;
+  }
+  .clearfix {
+  overflow: auto;
+}
   .flex-container {
     display: -webkit-flex;
     display: flex;
@@ -97,7 +120,7 @@ p {
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
 #cssmenu a span {
   float: none;
-}
+  }
 /* End IE5-Mac hack */
 #cssmenu .active a span,
 #cssmenu a:hover span {
@@ -118,13 +141,4 @@ p {
     margin-right: auto;
     padding:inherit;
     font-family: sans-serif;
-}
-.nav-bar {
-  position:absolute;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  width: 100%;
-  height: 10px;
-  background-color: white;
 }
